minute spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,12 @@ About
     width: 5rem;
     height: 0.25rem;
     background: var(--clr-primary5);
-    margin: 0.4rem 0 2rem 0;
+    margin: 0 auto;
+}
+
+.about-underline{
+    margin: 0;
+    margin-bottom: 2rem;
 }
 
 .about-subtitle{
@@ -541,6 +546,10 @@ Services
 
     .service-subtitle{
         font-size: 0.95rem;
+    }
+
+    .service-heading h2{
+        font-size: 2.5rem;
     }
 }
 
@@ -1058,10 +1067,6 @@ About Page
     place-items: center;
 }
 
-.underline{
-    margin: 0 auto;
-}
-
 .abt-info h1{
     text-align: center;
     font-size: 3rem;
@@ -1078,6 +1083,10 @@ About Page
     color: var(--clr-lightgrey);
     max-width: 45rem;
     margin: 3rem  auto 0 auto;
+}
+
+.abt-underline{
+    margin: 0 auto;
 }
 
 @media screen and (min-width : 768px){
